[FIX] web: dark mode alignment in user menu
before this commit, the dark mode button is not
aligned properly in the user menu.

the radio button is coming on top of the dark mode
description.

after this commit, the dark mode will be aligned
well in user menu

--- a/addons/web/static/src/webclient/user_menu/user_menu.scss
+++ b/addons/web/static/src/webclient/user_menu/user_menu.scss
@@ -5,3 +5,7 @@
         height: calc(var(--o-navbar-height) - 20px);
     }
 }
+
+.o_user_menu  .form-switch .form-check-input {
+    margin-left: 2.5em;
+}
